# jianzipu

./: .gitignore  README.md  dev_guide.md  draft.txt  pyproject.toml  readme.md
.github/workflows/: publish-jianzipu.yml
data/: encoding.csv  features.yaml  figma.css  glyphs.csv  output.fea
font/: .gitignore  constant.py  font.py  fontForgeScript.py  fontforge.pyi  index.html  jianzipu.sfd  makefont.py  process_data.py  roadmap.md  style.css
font/jsons/: hui_finger.json  number.json  xian_finger.json
font/layouts/: hui_finger.txt  number.txt  xian_finger.txt
im/: jianzipu.custom.yaml  jianzipu.dict.yaml  jianzipu.schema.yaml  jianzipu_custom.dict.yaml  jianzipu_min.custom.yaml  jianzipu_min.schema.yaml
jianzipu/: closure.yaml  constant.py  constants.py  feature.py  font.py  grammar.py  ids.py  kage.py  kage.yaml  layout.py  metadata.py  paragraph.py  parser.py  parser_prolog.py
jianzipu/data/: figma.css
package/: test.py
package/jianzipu/: README.md  constant.py  data.yaml  grammar.py  note.py  parser.py  pyproject.toml  readme.md  symbol.py  test.py
package/jianzipu/dev/: dev.ipynb  update_kage.py
package/jianzipu/jianzipu/: closure.yaml  constant.py  data.yaml  grammar.py  ids.py  ids.yaml  kage.py  kage.yaml  note.py  paragraph.py  parser.pl  parser.py  parser_prolog.py
scripts/: aux.ipynb  dev.ipynb  feature.ipynb  font.ipynb  layout.ipynb  parse.ipynb  test.py
site/online-editor/: LICENSE  auto-imports.d.ts  components.d.ts  package.json  pnpm-lock.yaml  tsconfig.json
site/online-editor/public/: kage.yaml  parser.pl
site/online-editor/src/components/: TheInput.vue
site/online-editor/src/composables/: constant.ts  index.ts  parser.ts  prolog.ts  tokenizer.ts
site/online-editor/src/pages/: index.vue
site/古籍渲染/: note.md  render.js
曲谱/: 流水.txt  酒狂_全写.txt  酒狂_简写.txt
